Font and spacing fixes

--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ html::-webkit-scrollbar-thumb:hover {
 }
 
 body {
-  font-family: "Poppins", Helvetica, sans-serif;
+  font-family: "Poppins", Helvetica, sans-serif !important;
   background-color: #222222;
   color: white;
   height: 100%;
@@ -44,4 +44,8 @@ ul > li.no-border-top {
 
 ul > li.no-border-bot {
   border-bottom: none !important;
+}
+
+.color-dusky {
+  color: #d5d5d5 !important;
 }
